New subpage && syntax errors

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <h1>Post destacados</h1>
       <div class="row">
         <div class="col-12 col-md-6 my-2 ">
-          <div class="card shadow-sm">
+          <article class="card shadow-sm">
             <img src="./img/football.jpg" class="bd-placeholder-img card-img-top">
-            <div class="card-body">
+            <section class="card-body">
               <div class="d-flex">
                 <h5 class="card-title">⚽️ Mejora tu juego con estos consejos de entrenamiento de fútbol 🥅</h5>
                 <button type="button" class="btn btn-sm btn-outline-secondry">Deporte</button>
@@ -47,13 +47,13 @@
               <p class="card-text">El fútbol es un deporte que requiere una combinación de habilidades técnicas,
                 tácticas,
                 físicas y mentales. Aquí te explicamos cómo puedes mejorar en cada uno de estos aspectos:</p>
-            </div>
-          </div>
+            </section>
+          </article>
         </div>
         <div class="col-12 col-md-6 my-2">
-          <div class="card shadow-sm">
+          <article class="card shadow-sm">
             <img src="./img/swimming.jpg" class="bd-placeholder-img card-img-top">
-            <div class="card-body">
+            <section class="card-body">
               <div class="d-flex">
                 <h5 class="card-title">🏊Mejora tus estilos de natación con estos consejos 🏊‍♂️</h5>
                 <button type="button" class="btn btn-sm btn-outline-secondry">Deporte</button>
@@ -67,40 +67,41 @@
               <p class="card-text">La natación es un deporte completo que puede ayudarte a mejorar tu salud y tu
                 forma
                 física. Aquí te explicamos cómo puedes optimizar tus estilos de natación:</p>
-            </div>
-          </div>
+            </section>
+          </article>
         </div>
       </div>
     </section>
     <section id="categorias" class="mt-4">
       <h2>Categorias</h2>
-
       <div class="row">
         <div class="col-7 my-2">
-          <div class="card shadow-sm">
-            <img src="./img/rutes.jpg" class="bd-placeholder-img card-img-top">
-            <div class="card-body">
-              <div class="d-flex">
-                <h5 class="card-title">🥾 Descubre las mejores rutas de senderismo 🌲</h5>
-                <button type="button" class="btn btn-sm btn-outline-secondry">Salud</button>
-              </div>
-              <div class="d-flex justify-content-left align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
+          <a href="./trekking.html">
+            <article class="card shadow-sm">
+              <img src="./img/rutes.jpg" class="bd-placeholder-img card-img-top">
+              <section class="card-body">
+                <div class="d-flex">
+                  <h5 class="card-title">🥾 Descubre las mejores rutas de senderismo 🌲</h5>
+                  <button type="button" class="btn btn-sm btn-outline-secondry">Salud</button>
                 </div>
-                <small class="text-muted">Hace 5 minutos</small>
-              </div>
-              <p class="card-text">El senderismo es una actividad maravillosa que te permite explorar la naturaleza
-                mientras haces ejercicio. Aquí te presentamos algunas rutas increíbles que puedes considerar:</p>
-            </div>
-          </div>
+                <div class="d-flex justify-content-left align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
+                  </div>
+                  <small class="text-muted">Hace 5 minutos</small>
+                </div>
+                <p class="card-text">El senderismo es una actividad maravillosa que te permite explorar la naturaleza
+                  mientras haces ejercicio. Aquí te presentamos algunas rutas increíbles que puedes considerar:</p>
+              </section>
+            </article>
+          </a>
         </div>
         <div class="col-5 my-2">
           <div class="row">
             <div class="col-12 ">
-              <div class="card shadow-sm">
+              <article class="card shadow-sm">
                 <img src="./img/bycicle.jpg" class="bd-placeholder-img card-img-top">
-                <div class="card-body">
+                <section class="card-body">
                   <div class="d-flex">
                     <h5 class="card-title">🚲 Las ventajas de la bicicleta eléctrica 🌍</h5>
                     <button type="button" class="btn btn-sm btn-outline-secondry">Deporte</button>
@@ -113,15 +114,15 @@
                   </div>
                   <p class="card-text">Las bicicletas eléctricas están ganando popularidad y no es de extrañar, ya que
                     ofrecen numerosos beneficios...</p>
-                </div>
-              </div>
+                </section>
+              </article>
             </div>
           </div>
           <div class="row">
             <div class="col-12 my-2">
-              <div class="card shadow-sm">
+              <article class="card shadow-sm">
                 <img src="./img/yoga.jpg" class="bd-placeholder-img card-img-top">
-                <div class="card-body">
+                <section class="card-body">
                   <div class="d-flex">
                     <h5 class="card-title">🧘‍️ Mejora tu vida con el Yoga 🧘‍♂️</h5>
                     <button type="button" class="btn btn-sm btn-outline-secondry">Salud</button>
@@ -134,8 +135,8 @@
                   </div>
                   <p class="card-text">El yoga es una práctica milenaria que puede aportarte numerosos beneficios,
                     tanto físicos como mentales...</p>
-                </div>
-              </div>
+                </section>
+              </article>
             </div>
           </div>
         </div>
