--- a/index.html
+++ b/index.html
@@ -31,44 +31,48 @@
       <h1>Post destacados</h1>
       <div class="row">
         <div class="col-12 col-md-6 my-2 ">
-          <article class="card shadow-sm">
-            <img src="./img/football.jpg" class="bd-placeholder-img card-img-top">
-            <section class="card-body">
-              <div class="d-flex">
-                <h5 class="card-title">⚽️ Mejora tu juego con estos consejos de entrenamiento de fútbol 🥅</h5>
-                <button type="button" class="btn btn-sm btn-outline-secondry">Deporte</button>
-              </div>
-              <div class="d-flex justify-content-left align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
+          <a href="footballl.html">
+            <article class="card shadow-sm">
+              <img src="./img/football.jpg" class="bd-placeholder-img card-img-top">
+              <section class="card-body">
+                <div class="d-flex">
+                  <h5 class="card-title">⚽️ Mejora tu juego con estos consejos de entrenamiento de fútbol 🥅</h5>
+                  <button type="button" class="btn btn-sm btn-outline-secondry">Deporte</button>
                 </div>
-                <small class="text-muted">Hace 5 minutos</small>
-              </div>
-              <p class="card-text">El fútbol es un deporte que requiere una combinación de habilidades técnicas,
-                tácticas,
-                físicas y mentales. Aquí te explicamos cómo puedes mejorar en cada uno de estos aspectos:</p>
-            </section>
-          </article>
+                <div class="d-flex justify-content-left align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
+                  </div>
+                  <small class="text-muted">Hace 5 minutos</small>
+                </div>
+                <p class="card-text">El fútbol es un deporte que requiere una combinación de habilidades técnicas,
+                  tácticas,
+                  físicas y mentales. Aquí te explicamos cómo puedes mejorar en cada uno de estos aspectos:</p>
+              </section>
+            </article>
+          </a>
         </div>
         <div class="col-12 col-md-6 my-2">
-          <article class="card shadow-sm">
-            <img src="./img/swimming.jpg" class="bd-placeholder-img card-img-top">
-            <section class="card-body">
-              <div class="d-flex">
-                <h5 class="card-title">🏊Mejora tus estilos de natación con estos consejos 🏊‍♂️</h5>
-                <button type="button" class="btn btn-sm btn-outline-secondry">Deporte</button>
-              </div>
-              <div class="d-flex justify-content-left align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
+          <a href="swimming.html">
+            <article class="card shadow-sm">
+              <img src="./img/swimming.jpg" class="bd-placeholder-img card-img-top">
+              <section class="card-body">
+                <div class="d-flex">
+                  <h5 class="card-title">🏊Mejora tus estilos de natación con estos consejos 🏊‍♂️</h5>
+                  <button type="button" class="btn btn-sm btn-outline-secondry">Deporte</button>
                 </div>
-                <small class="text-muted">Hace 5 minutos</small>
-              </div>
-              <p class="card-text">La natación es un deporte completo que puede ayudarte a mejorar tu salud y tu
-                forma
-                física. Aquí te explicamos cómo puedes optimizar tus estilos de natación:</p>
-            </section>
-          </article>
+                <div class="d-flex justify-content-left align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
+                  </div>
+                  <small class="text-muted">Hace 5 minutos</small>
+                </div>
+                <p class="card-text">La natación es un deporte completo que puede ayudarte a mejorar tu salud y tu
+                  forma
+                  física. Aquí te explicamos cómo puedes optimizar tus estilos de natación:</p>
+              </section>
+            </article>
+          </a>
         </div>
       </div>
     </section>
@@ -76,7 +80,7 @@
       <h2>Categorias</h2>
       <div class="row">
         <div class="col-7 my-2">
-          <a href="./trekking.html">
+          <a href="./hiking.html">
             <article class="card shadow-sm">
               <img src="./img/rutes.jpg" class="bd-placeholder-img card-img-top">
               <section class="card-body">
@@ -99,44 +103,48 @@
         <div class="col-5 my-2">
           <div class="row">
             <div class="col-12 ">
-              <article class="card shadow-sm">
-                <img src="./img/bycicle.jpg" class="bd-placeholder-img card-img-top">
-                <section class="card-body">
-                  <div class="d-flex">
-                    <h5 class="card-title">🚲 Las ventajas de la bicicleta eléctrica 🌍</h5>
-                    <button type="button" class="btn btn-sm btn-outline-secondry">Deporte</button>
-                  </div>
-                  <div class="d-flex justify-content-left align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
+              <a href="bicycle.html">
+                <article class="card shadow-sm">
+                  <img src="./img/bycicle.jpg" class="bd-placeholder-img card-img-top">
+                  <section class="card-body">
+                    <div class="d-flex">
+                      <h5 class="card-title">🚲 Las ventajas de la bicicleta eléctrica 🌍</h5>
+                      <button type="button" class="btn btn-sm btn-outline-secondry">Deporte</button>
                     </div>
-                    <small class="text-muted">Hace 5 minutos</small>
-                  </div>
-                  <p class="card-text">Las bicicletas eléctricas están ganando popularidad y no es de extrañar, ya que
-                    ofrecen numerosos beneficios...</p>
-                </section>
-              </article>
+                    <div class="d-flex justify-content-left align-items-center">
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
+                      </div>
+                      <small class="text-muted">Hace 5 minutos</small>
+                    </div>
+                    <p class="card-text">Las bicicletas eléctricas están ganando popularidad y no es de extrañar, ya que
+                      ofrecen numerosos beneficios...</p>
+                  </section>
+                </article>
+              </a>
             </div>
           </div>
           <div class="row">
             <div class="col-12 my-2">
-              <article class="card shadow-sm">
-                <img src="./img/yoga.jpg" class="bd-placeholder-img card-img-top">
-                <section class="card-body">
-                  <div class="d-flex">
-                    <h5 class="card-title">🧘‍️ Mejora tu vida con el Yoga 🧘‍♂️</h5>
-                    <button type="button" class="btn btn-sm btn-outline-secondry">Salud</button>
-                  </div>
-                  <div class="d-flex justify-content-left align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
+              <a href="toga.html">
+                <article class="card shadow-sm">
+                  <img src="./img/yoga.jpg" class="bd-placeholder-img card-img-top">
+                  <section class="card-body">
+                    <div class="d-flex">
+                      <h5 class="card-title">🧘‍️ Mejora tu vida con el Yoga 🧘‍♂️</h5>
+                      <button type="button" class="btn btn-sm btn-outline-secondry">Salud</button>
                     </div>
-                    <small class="text-muted">Hace 5 minutos</small>
-                  </div>
-                  <p class="card-text">El yoga es una práctica milenaria que puede aportarte numerosos beneficios,
-                    tanto físicos como mentales...</p>
-                </section>
-              </article>
+                    <div class="d-flex justify-content-left align-items-center">
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
+                      </div>
+                      <small class="text-muted">Hace 5 minutos</small>
+                    </div>
+                    <p class="card-text">El yoga es una práctica milenaria que puede aportarte numerosos beneficios,
+                      tanto físicos como mentales...</p>
+                  </section>
+                </article>
+              </a>
             </div>
           </div>
         </div>
