--- a/swimming.html
+++ b/swimming.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-  <title>🥾 Descubre las mejores rutas de senderismo 🌲</title>
+  <title>🏊‍♀️ Mejora tus estilos de natación con estos consejos 🏊‍♂️</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
       <img src="./img/rutes.jpg" class="bd-placeholder-img card-img-top">
       <div class="card-body">
         <div class="d-flex">
-          <h5 class="card-title">🚲 Las ventajas de la bicicleta eléctrica 🌍</h5>
+          <h5 class="card-title">🏊‍♀️ Mejora tus estilos de natación con estos consejos 🏊‍♂️</h5>
           <button type="button" class="btn btn-sm btn-outline-secondry">Salud</button>
         </div>
         <div class=" justify-content-left align-items-center">
@@ -28,41 +28,31 @@
           <small class="text-muted">Hace 5 minutos</small>
         </div>
         <div class="card-text">
-          <h3>Las bicicletas eléctricas están ganando popularidad y no es de extrañar, ya que ofrecen numerosos
-            beneficios. Aquí te explicamos algunos de ellos:</h3>
-          <p>1️⃣ Medio ambiente</p>
-          <p>Las bicicletas eléctricas son una forma de transporte sostenible. No emiten gases de efecto invernadero, lo
-            que ayuda a
-            reducir la contaminación del aire. Además, su fabricación y mantenimiento tienen un impacto ambiental mucho
-            menor que el
-            de los coches.
-          </p>
-          <p>2️⃣ Salud</p>
-          <p>Aunque las bicicletas eléctricas cuentan con asistencia al pedaleo, sigues teniendo que pedalear, por lo
-            que
-            es una
-            buena forma de hacer ejercicio. Además, montar en bicicleta puede ser beneficioso para la salud mental, ya
-            que
-            permite
-            disfrutar del aire libre y reduce el estrés.</p>
-          <p>3️⃣ Ahorro</p>
-          <p>Aunque la inversión inicial puede ser alta, a largo plazo una bicicleta eléctrica puede ayudarte a ahorrar
-            dinero. No
-            tienes que pagar por gasolina, seguros, impuestos de circulación ni aparcamiento.</p>
-
-          <p>4️⃣ Movilidad</p>
-          <p>Las bicicletas eléctricas pueden ser una solución a los problemas de tráfico en las ciudades. Permiten
-            desplazarse de forma rápida y eficiente, y puedes usar carriles bici y caminos que no están accesibles para
-            los coches.
-            En cuanto a los diferentes modelos de bicicletas eléctricas, hay una gran variedad en el mercado, con
-            diferentes precios
-            y características. Algunas bicicletas están diseñadas para la ciudad, con una posición de conducción cómoda
-            y
-            una buen capacidad de maniobra.</p>
-          <p>Otras están diseñadas para el campo, con ruedas más grandes y una suspensión más
-            robusta. Es importante investigar y probar diferentes modelos para encontrar el que mejor se adapte a tus
-            necesidades.</p>
-          <p>Esperamos que este post te ayude a entender las ventajas de las bicicletas eléctricas. ¡Feliz pedaleo!</p>
+          <h3>La natación es un deporte completo que puede ayudarte a mejorar tu salud y tu forma física. Aquí te
+            explicamos cómo puedes optimizar tus estilos de natación:</h3>
+          <h2>1️⃣ Estilo libre</h2>
+          <p>Respiración: Debes girar la cabeza a un lado para respirar cada vez que tu brazo sale del agua.</p>
+          <p>Posición del cuerpo: Mantén tu cuerpo lo más plano posible para reducir la resistencia del agua.</p>
+          <p>Frecuencia y longitud de las brazadas: Las brazadas deben ser largas y completas, pero también rápidas. La
+            clave es encontrar un equilibrio entre la longitud y la velocidad de las brazadas.</p>
+          <h2>2️⃣ Espalda</h2>
+          <p>Respiración: Puedes respirar libremente en este estilo ya que tu cara siempre está fuera del agua.</p>
+          <p>Posición del cuerpo: Al igual que en el estilo libre, tu cuerpo debe estar lo más plano posible.</p>
+          <p>Frecuencia y longitud de las brazadas: Las brazadas deben ser largas y completas, con un movimiento
+            constante y fluido.</p>
+          <h2>3️⃣ Braza</h2>
+          <p>Respiración: Debes exhalar bajo el agua y luego inhalar cuando tu cabeza salga del agua durante el golpe de
+            brazada.</p>
+          <p>Posición del cuerpo: En este estilo, tu cuerpo se moverá hacia arriba y hacia abajo en el agua.</p>
+          <p>Frecuencia y longitud de las brazadas: Las brazadas y las patadas deben ser cortas y rápidas.</p>
+          <h2>4️⃣ Mariposa</h2>
+          <p>Respiración: Debes inhalar cuando tus brazos salgan del agua y exhalar cuando tus brazos estén bajo el
+            agua.</p>
+          <p>Posición del cuerpo: Tu cuerpo debe moverse en un movimiento ondulante.</p>
+          <p>Frecuencia y longitud de las brazadas: Las brazadas deben ser largas y fuertes, y tus piernas deben moverse
+            juntas en un movimiento de “patada de delfín”.</p>
+          <p>Esperamos que este post te ayude en tu camino para convertirte en un mejor nadador. Recuerda, la clave es
+            la consistencia y la paciencia. ¡Buena suerte!</p>
         </div>
       </div>
     </div>
