--- a/swimming.html
+++ b/swimming.html
@@ -13,19 +13,17 @@
 </head>
 
 <body>
-  <div class="col-12 my-2">
+  <div class="col-9 m-2 ">
     <div class="card shadow-sm">
-      <img src="./img/rutes.jpg" class="bd-placeholder-img card-img-top">
+      <img src="./img/swimming.jpg" class="bd-placeholder-img card-img-top">
       <div class="card-body">
         <div class="d-flex">
-          <h5 class="card-title">🏊‍♀️ Mejora tus estilos de natación con estos consejos 🏊‍♂️</h5>
-          <button type="button" class="btn btn-sm btn-outline-secondry">Salud</button>
+          <h1 class="card-title">🏊‍♀️ Mejora tus estilos de natación con estos consejos 🏊‍♂️</h1>
+          <small class="text-muted mx-2">Deporte</small>
         </div>
-        <div class=" justify-content-left align-items-center">
-          <div class="btn-group">
-            <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
-          </div>
-          <small class="text-muted">Hace 5 minutos</small>
+        <div class="justify-content-left align-items-center">
+          <small class="text-danger">Desconocido</small>
+          <small class="text-muted mx-2">Hace 5 minutos</small>
         </div>
         <div class="card-text">
           <h3>La natación es un deporte completo que puede ayudarte a mejorar tu salud y tu forma física. Aquí te
@@ -56,6 +54,7 @@
         </div>
       </div>
     </div>
+  </div>
 </body>
 
 </html>
