--- a/yoga.html
+++ b/yoga.html
@@ -13,21 +13,19 @@
 </head>
 
 <body>
-  <div class="col-12 my-2">
+  <div class="col-9 m-2">
     <div class="card shadow-sm">
-      <img src="./img/rutes.jpg" class="bd-placeholder-img card-img-top">
+      <img src="./img/yoga.jpg" class="bd-placeholder-img card-img-top">
       <div class="card-body">
         <div class="d-flex">
           <h5 class="card-title">🧘‍♀️ Mejora tu vida con el Yoga 🧘‍♂️</h5>
-          <button type="button" class="btn btn-sm btn-outline-secondry">Salud</button>
+          <small class="text-muted">Salud</small>
         </div>
-        <div class=" justify-content-left align-items-center">
-          <div class="btn-group">
-            <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
-          </div>
-          <small class="text-muted">Hace 5 minutos</small>
+        <div class="justify-content-left align-items-center">
+          <small class="text-danger">Desconocido</small>
+          <small class="text-muted mx-2">Hace 5 minutos</small>
         </div>
-        <div class="card-text">
+        <div class="card-text text-align-center">
           <h3>El yoga es una práctica milenaria que puede aportarte numerosos beneficios, tanto físicos como mentales.
             Aquí te
             explicamos cómo puede ayudarte:</h3>
@@ -49,7 +47,7 @@
           <p>El yoga puede ayudarte a mejorar tu postura a través de posturas que alinean tu cuerpo y fortalecen tus
             músculos centrales. Algunas posturas que pueden ayudarte a mejorar tu postura incluyen la Montaña, el Puente
             y el Gato-Vaca.</p>
-          <p>5️⃣ Reducción del estrés, la ansiedad, el insomnio y la depresión</p>
+          <h2>5️⃣ Reducción del estrés, la ansiedad, el insomnio y la depresión</h2>
           <p>El yoga puede ayudarte a reducir el estrés, la ansiedad, el insomnio y la depresión a través de la
             meditación y la respiración profunda. Algunas posturas que pueden ayudarte a reducir estos síntomas incluyen
             el Niño, la Paloma y la Savasana.</p>
@@ -59,6 +57,7 @@
         </div>
       </div>
     </div>
+  </div>
 </body>
 
 </html>
