--- a/football.html
+++ b/football.html
@@ -13,19 +13,17 @@
 </head>
 
 <body>
-  <div class="col-12 my-2">
-    <div class="card shadow-sm">
-      <img src="./img/rutes.jpg" class="bd-placeholder-img card-img-top">
+  <div class="col-9 m-2">
+    <div class="card">
+      <img src="./img/football.jpg">
       <div class="card-body">
         <div class="d-flex">
           <h5 class="card-title">⚽️ Mejora tu juego con estos consejos de entrenamiento de fútbol 🥅</h5>
-          <button type="button" class="btn btn-sm btn-outline-secondry">Salud</button>
+          <small class="text-muted">Deporte</small>
         </div>
-        <div class=" justify-content-left align-items-center">
-          <div class="btn-group">
-            <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
-          </div>
-          <small class="text-muted">Hace 5 minutos</small>
+        <div class="justify-content-left align-items-center">
+          <small class="text-danger">Desconocido</small>
+          <small class="text-muted mx-2">Hace 5 minutos</small>
         </div>
         <div class="card-text">
           <h2>1️⃣ Técnica</h2>
@@ -61,6 +59,7 @@
         </div>
       </div>
     </div>
+  </div>
 </body>
 
 </html>
