--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar sticky-top bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img src="./img/website-brand.png" style="width: 64px; height: 64px;"
           alt="website-brand"></a>
@@ -30,20 +30,18 @@
     <section id="destacados">
       <h1>Post destacados</h1>
       <div class="row">
-        <div class="col-12 col-md-6 my-2 ">
-          <a href="footballl.html">
-            <article class="card shadow-sm">
-              <img src="./img/football.jpg" class="bd-placeholder-img card-img-top">
+        <div class="col-12 col-md-6 my-2">
+          <a href="football.html">
+            <article class="card">
+              <img src="./img/football.jpg">
               <section class="card-body">
                 <div class="d-flex">
                   <h5 class="card-title">⚽️ Mejora tu juego con estos consejos de entrenamiento de fútbol 🥅</h5>
-                  <button type="button" class="btn btn-sm btn-outline-secondry">Deporte</button>
+                  <small class="text-muted mx-2">Deporte</small>
                 </div>
                 <div class="d-flex justify-content-left align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
-                  </div>
-                  <small class="text-muted">Hace 5 minutos</small>
+                  <small class="text-danger">Desconocido</small>
+                  <small class="text-muted mx-2">Hace 5 minutos</small>
                 </div>
                 <p class="card-text">El fútbol es un deporte que requiere una combinación de habilidades técnicas,
                   tácticas,
@@ -54,17 +52,15 @@
         </div>
         <div class="col-12 col-md-6 my-2">
           <a href="swimming.html">
-            <article class="card shadow-sm">
-              <img src="./img/swimming.jpg" class="bd-placeholder-img card-img-top">
+            <article class="card">
+              <img src="./img/swimming.jpg">
               <section class="card-body">
                 <div class="d-flex">
                   <h5 class="card-title">🏊Mejora tus estilos de natación con estos consejos 🏊‍♂️</h5>
-                  <button type="button" class="btn btn-sm btn-outline-secondry">Deporte</button>
+                  <small class="text-muted mx-2">Deporte</small>
                 </div>
                 <div class="d-flex justify-content-left align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
-                  </div>
+                  <small class="text-danger mx-2">Desconocido</small>
                   <small class="text-muted">Hace 5 minutos</small>
                 </div>
                 <p class="card-text">La natación es un deporte completo que puede ayudarte a mejorar tu salud y tu
@@ -81,17 +77,15 @@
       <div class="row">
         <div class="col-7 my-2">
           <a href="./hiking.html">
-            <article class="card shadow-sm">
-              <img src="./img/rutes.jpg" class="bd-placeholder-img card-img-top">
+            <article class="card">
+              <img src="./img/hiking.jpg">
               <section class="card-body">
                 <div class="d-flex">
                   <h5 class="card-title">🥾 Descubre las mejores rutas de senderismo 🌲</h5>
-                  <button type="button" class="btn btn-sm btn-outline-secondry">Salud</button>
+                  <small class="text-muted mx-2">Salud</small>
                 </div>
                 <div class="d-flex justify-content-left align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
-                  </div>
+                  <small class="text-danger mx-2">Desconocido</small>
                   <small class="text-muted">Hace 5 minutos</small>
                 </div>
                 <p class="card-text">El senderismo es una actividad maravillosa que te permite explorar la naturaleza
@@ -102,19 +96,17 @@
         </div>
         <div class="col-5 my-2">
           <div class="row">
-            <div class="col-12 ">
-              <a href="bicycle.html">
-                <article class="card shadow-sm">
-                  <img src="./img/bycicle.jpg" class="bd-placeholder-img card-img-top">
+            <div class="col-12">
+              <a href="cycling.html">
+                <article class="card">
+                  <img src="./img/cycling.jpg">
                   <section class="card-body">
                     <div class="d-flex">
                       <h5 class="card-title">🚲 Las ventajas de la bicicleta eléctrica 🌍</h5>
-                      <button type="button" class="btn btn-sm btn-outline-secondry">Deporte</button>
+                      <small class="text-muted mx-2">Deporte</small>
                     </div>
                     <div class="d-flex justify-content-left align-items-center">
-                      <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
-                      </div>
+                      <small class="text-danger mx-2">Desconocido</small>
                       <small class="text-muted">Hace 5 minutos</small>
                     </div>
                     <p class="card-text">Las bicicletas eléctricas están ganando popularidad y no es de extrañar, ya que
@@ -126,18 +118,16 @@
           </div>
           <div class="row">
             <div class="col-12 my-2">
-              <a href="toga.html">
-                <article class="card shadow-sm">
-                  <img src="./img/yoga.jpg" class="bd-placeholder-img card-img-top">
+              <a href="yoga.html">
+                <article class="card">
+                  <img src="./img/yoga.jpg">
                   <section class="card-body">
                     <div class="d-flex">
                       <h5 class="card-title">🧘‍️ Mejora tu vida con el Yoga 🧘‍♂️</h5>
-                      <button type="button" class="btn btn-sm btn-outline-secondry">Salud</button>
+                      <small class="text-muted mx-2">Salud</small>
                     </div>
                     <div class="d-flex justify-content-left align-items-center">
-                      <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondry text-danger">Desconocido</button>
-                      </div>
+                      <small class=" text-danger mx-2">Desconocido</small>
                       <small class="text-muted">Hace 5 minutos</small>
                     </div>
                     <p class="card-text">El yoga es una práctica milenaria que puede aportarte numerosos beneficios,
