change imgs && add footer

--- a/football.html
+++ b/football.html
@@ -9,14 +9,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-  <title>⚽️ Mejora tu juego con estos consejos de entrenamiento de fútbol 🥅</title>
+  <link rel="icon" href="./img/website-brand.webp">
+  <title>Mundo deporte- ⚽️ Mejora tu juego con estos consejos de entrenamiento de fútbol 🥅</title>
 </head>
 
 <body>
   <div class="col-9 m-2">
-    <div class="card">
-      <img src="./img/football.jpg">
-      <div class="card-body">
+    <article class="card">
+      <img loading="lazy" src="./img/football.webp" alt="a football ball">
+      <section class="card-body">
         <div class="d-flex">
           <h5 class="card-title">⚽️ Mejora tu juego con estos consejos de entrenamiento de fútbol 🥅</h5>
           <small class="text-muted">Deporte</small>
@@ -25,7 +26,7 @@
           <small class="text-danger">Desconocido</small>
           <small class="text-muted mx-2">Hace 5 minutos</small>
         </div>
-        <div class="card-text">
+        <section class="card-text">
           <h2>1️⃣ Técnica</h2>
           <p>La técnica es fundamental en el fútbol. Incluye habilidades como el control del balón, el pase, el tiro, el
             regate y el
@@ -56,9 +57,9 @@
             saludables.</p>
           <p>Esperamos que este post te ayude en tu camino para convertirte en un mejor futbolista. Recuerda, la clave
             es la consistencia y la paciencia. ¡Buena suerte!</p>
-        </div>
-      </div>
-    </div>
+        </section>
+      </section>
+    </article>
   </div>
 </body>
 
