--- a/hiking.html
+++ b/hiking.html
@@ -9,14 +9,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-  <title>🥾 Descubre las mejores rutas de senderismo 🌲</title>
+  <link rel="icon" href="./img/website-brand.webp">
+  <title>Mundo deporte- 🥾 Descubre las mejores rutas de senderismo 🌲</title>
 </head>
 
 <body>
   <div class="col-9 m-2">
-    <div class="card">
-      <img src="./img/hiking.jpg" class="bd-placeholder-img card-img-top">
-      <div class="card-body">
+    <article class="card">
+      <img loading="lazy" src="./img/hiking.webp" alt="a people hiking">
+      <section class="card-body">
         <div class="d-flex">
           <h5 class="card-title">🥾 Descubre las mejores rutas de senderismo 🌲</h5>
           <small class="text-muted">Salud</small>
@@ -25,7 +26,7 @@
           <small class="text-danger">Desconocido</small>
           <small class="text-muted mx-2">Hace 5 minutos</small>
         </div>
-        <div class="card-text">
+        <section class="card-text">
           <h3>El senderismo es una actividad maravillosa que te permite explorar la naturaleza mientras haces ejercicio.
             Aquí te
             presentamos algunas rutas increíbles que puedes considerar:</h3>
@@ -57,9 +58,9 @@
             senderismo en condiciones climáticas peligrosas.</p>
           <p>Esperamos que este post te inspire a explorar la belleza de la naturaleza a través del senderismo. ¡Buena
             suerte!</p>
-        </div>
-      </div>
-    </div>
+        </section>
+      </section>
+    </article>
   </div>
 </body>
 
