--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/42f771bafc.js" crossorigin="anonymous"></script>
-  <link rel="icon" href="./img/OIG4.7WRGJB.jpeg">
-  <title>Blog Website</title>
+  <link rel="icon" href="./img/website-brand.webp">
+  <title>Mundo deporte</title>
 </head>
 
 <body>
   <nav class="navbar sticky-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="./img/website-brand.png" style="width: 64px; height: 64px;"
-          alt="website-brand"></a>
+      <a class="navbar-brand" href="#"><img src="./img/website-brand.webp" alt="website-brand"></a>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-danger" type="submit">Buscar</button>
@@ -33,7 +32,7 @@
         <div class="col-12 col-md-6 my-2">
           <a href="football.html">
             <article class="card">
-              <img src="./img/football.jpg">
+              <img loading="lazy" src="./img/football.webp" alt="a football ball">
               <section class="card-body">
                 <div class="d-flex">
                   <h5 class="card-title">⚽️ Mejora tu juego con estos consejos de entrenamiento de fútbol 🥅</h5>
@@ -43,9 +42,11 @@
                   <small class="text-danger">Desconocido</small>
                   <small class="text-muted mx-2">Hace 5 minutos</small>
                 </div>
-                <p class="card-text">El fútbol es un deporte que requiere una combinación de habilidades técnicas,
-                  tácticas,
-                  físicas y mentales. Aquí te explicamos cómo puedes mejorar en cada uno de estos aspectos:</p>
+                <section class="card-text">
+                  <p>El fútbol es un deporte que requiere una combinación de habilidades técnicas,
+                    tácticas,
+                    físicas y mentales. Aquí te explicamos cómo puedes mejorar en cada uno de estos aspectos:</p>
+                </section>
               </section>
             </article>
           </a>
@@ -53,7 +54,7 @@
         <div class="col-12 col-md-6 my-2">
           <a href="swimming.html">
             <article class="card">
-              <img src="./img/swimming.jpg">
+              <img loading="lazy" src="./img/swimming.webp" alt="a person swimming">
               <section class="card-body">
                 <div class="d-flex">
                   <h5 class="card-title">🏊Mejora tus estilos de natación con estos consejos 🏊‍♂️</h5>
@@ -63,9 +64,11 @@
                   <small class="text-danger mx-2">Desconocido</small>
                   <small class="text-muted">Hace 5 minutos</small>
                 </div>
-                <p class="card-text">La natación es un deporte completo que puede ayudarte a mejorar tu salud y tu
-                  forma
-                  física. Aquí te explicamos cómo puedes optimizar tus estilos de natación:</p>
+                <section class="card-text">
+                  <p>La natación es un deporte completo que puede ayudarte a mejorar tu salud y tu
+                    forma
+                    física. Aquí te explicamos cómo puedes optimizar tus estilos de natación:</p>
+                </section>
               </section>
             </article>
           </a>
@@ -78,7 +81,7 @@
         <div class="col-7 my-2">
           <a href="./hiking.html">
             <article class="card">
-              <img src="./img/hiking.jpg">
+              <img loading="lazy" src="./img/hiking.webp" alt="a people hiking">
               <section class="card-body">
                 <div class="d-flex">
                   <h5 class="card-title">🥾 Descubre las mejores rutas de senderismo 🌲</h5>
@@ -88,8 +91,10 @@
                   <small class="text-danger mx-2">Desconocido</small>
                   <small class="text-muted">Hace 5 minutos</small>
                 </div>
-                <p class="card-text">El senderismo es una actividad maravillosa que te permite explorar la naturaleza
-                  mientras haces ejercicio. Aquí te presentamos algunas rutas increíbles que puedes considerar:</p>
+                <section class="card-text">
+                  <p>El senderismo es una actividad maravillosa que te permite explorar la naturaleza
+                    mientras haces ejercicio. Aquí te presentamos algunas rutas increíbles que puedes considerar:</p>
+                </section>
               </section>
             </article>
           </a>
@@ -99,7 +104,7 @@
             <div class="col-12">
               <a href="cycling.html">
                 <article class="card">
-                  <img src="./img/cycling.jpg">
+                  <img loading="lazy" src="./img/cycling.webp" alt="a bycicle">
                   <section class="card-body">
                     <div class="d-flex">
                       <h5 class="card-title">🚲 Las ventajas de la bicicleta eléctrica 🌍</h5>
@@ -109,8 +114,10 @@
                       <small class="text-danger mx-2">Desconocido</small>
                       <small class="text-muted">Hace 5 minutos</small>
                     </div>
-                    <p class="card-text">Las bicicletas eléctricas están ganando popularidad y no es de extrañar, ya que
-                      ofrecen numerosos beneficios...</p>
+                    <section class="card-text">
+                      <p>Las bicicletas eléctricas están ganando popularidad y no es de extrañar, ya que
+                        ofrecen numerosos beneficios...</p>
+                    </section>
                   </section>
                 </article>
               </a>
@@ -120,7 +127,7 @@
             <div class="col-12 my-2">
               <a href="yoga.html">
                 <article class="card">
-                  <img src="./img/yoga.jpg">
+                  <img loading="lazy" src="./img/yoga.webp" alt="a person meditating">
                   <section class="card-body">
                     <div class="d-flex">
                       <h5 class="card-title">🧘‍️ Mejora tu vida con el Yoga 🧘‍♂️</h5>
@@ -130,8 +137,10 @@
                       <small class=" text-danger mx-2">Desconocido</small>
                       <small class="text-muted">Hace 5 minutos</small>
                     </div>
-                    <p class="card-text">El yoga es una práctica milenaria que puede aportarte numerosos beneficios,
-                      tanto físicos como mentales...</p>
+                    <section class="card-text">
+                      <p>El yoga es una práctica milenaria que puede aportarte numerosos beneficios,
+                        tanto físicos como mentales...</p>
+                    </section>
                   </section>
                 </article>
               </a>
@@ -140,6 +149,23 @@
         </div>
     </section>
   </div>
+  <footer class="footer bg-dark">
+    <div class="container-fluid">
+      <div class="d-flex">
+        <section class="website-brand">
+          <a class="footer-brand" href="#">
+            <img src="./img/website-brand.webp" alt="website-brand">
+          </a>
+        </section>
+        <section class="rrss">
+
+        </section>
+        <section class="copyrigth">
+          <h1>© El Blog de Nico 2024.Todos los derechos reservados</h1>
+        </section>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
