--- a/swimming.html
+++ b/swimming.html
@@ -9,14 +9,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-  <title>🏊‍♀️ Mejora tus estilos de natación con estos consejos 🏊‍♂️</title>
+  <link rel="icon" href="./img/website-brand.webp">
+  <title>Mundo deporte- 🏊‍♀️ Mejora tus estilos de natación con estos consejos 🏊‍♂️</title>
 </head>
 
 <body>
-  <div class="col-9 m-2 ">
-    <div class="card shadow-sm">
-      <img src="./img/swimming.jpg" class="bd-placeholder-img card-img-top">
-      <div class="card-body">
+  <div class="col-9 m-2">
+    <article class="card">
+      <img loading="lazy" src="./img/swimming.webp" alt="a person swimming">
+      <section class="card-body">
         <div class="d-flex">
           <h1 class="card-title">🏊‍♀️ Mejora tus estilos de natación con estos consejos 🏊‍♂️</h1>
           <small class="text-muted mx-2">Deporte</small>
@@ -25,7 +26,7 @@
           <small class="text-danger">Desconocido</small>
           <small class="text-muted mx-2">Hace 5 minutos</small>
         </div>
-        <div class="card-text">
+        <section class="card-text">
           <h3>La natación es un deporte completo que puede ayudarte a mejorar tu salud y tu forma física. Aquí te
             explicamos cómo puedes optimizar tus estilos de natación:</h3>
           <h2>1️⃣ Estilo libre</h2>
@@ -51,9 +52,9 @@
             juntas en un movimiento de “patada de delfín”.</p>
           <p>Esperamos que este post te ayude en tu camino para convertirte en un mejor nadador. Recuerda, la clave es
             la consistencia y la paciencia. ¡Buena suerte!</p>
-        </div>
-      </div>
-    </div>
+        </section>
+      </section>
+    </article>
   </div>
 </body>
 
