--- a/cycling.html
+++ b/cycling.html
@@ -9,14 +9,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-  <title>🚲 Las ventajas de la bicicleta eléctrica 🌍</title>
+  <link rel="icon" href="./img/website-brand.webp">
+  <title>Mundo deporte- 🚲 Las ventajas de la bicicleta eléctrica 🌍</title>
 </head>
 
 <body>
   <div class="col-9 m-2">
-    <div class="card">
-      <img src="./img/cycling.jpg" class="bd-placeholder-img card-img-top">
-      <div class="card-body">
+    <article class="card">
+      <img loading="lazy" src="./img/cycling.webp" alt="a bycicle">
+      <section class="card-body">
         <div class="d-flex">
           <h5 class="card-title">🚲 Las ventajas de la bicicleta eléctrica 🌍</h5>
           <small class="text-muted">Deporte</small>
@@ -25,7 +26,7 @@
           <small class="text-danger">Desconocido</small>
           <small class="text-muted mx-2">Hace 5 minutos</small>
         </div>
-        <div class="card-text">
+        <section class="card-text">
           <h3>Las bicicletas eléctricas están ganando popularidad y no es de extrañar, ya que ofrecen numerosos
             beneficios. Aquí te explicamos algunos de ellos:</h3>
           <p>1️⃣ Medio ambiente</p>
@@ -61,9 +62,9 @@
             robusta. Es importante investigar y probar diferentes modelos para encontrar el que mejor se adapte a tus
             necesidades.</p>
           <p>Esperamos que este post te ayude a entender las ventajas de las bicicletas eléctricas. ¡Feliz pedaleo!</p>
-        </div>
-      </div>
-    </div>
+        </section>
+      </section>
+    </article>
   </div>
 </body>
 
