--- a/yoga.html
+++ b/yoga.html
@@ -9,14 +9,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-  <title>🧘‍♀️ Mejora tu vida con el Yoga 🧘‍♂️</title>
+  <link rel="icon" href="./img/website-brand.webp">
+  <title>Mundo deporte- 🧘‍♀️ Mejora tu vida con el Yoga 🧘‍♂️</title>
 </head>
 
 <body>
   <div class="col-9 m-2">
-    <div class="card shadow-sm">
-      <img src="./img/yoga.jpg" class="bd-placeholder-img card-img-top">
-      <div class="card-body">
+    <article class="card">
+      <img loading="lazy" src="./img/yoga.webp" alt="a person meditating">
+      <section class="card-body">
         <div class="d-flex">
           <h5 class="card-title">🧘‍♀️ Mejora tu vida con el Yoga 🧘‍♂️</h5>
           <small class="text-muted">Salud</small>
@@ -25,7 +26,7 @@
           <small class="text-danger">Desconocido</small>
           <small class="text-muted mx-2">Hace 5 minutos</small>
         </div>
-        <div class="card-text text-align-center">
+        <section class="card-text">
           <h3>El yoga es una práctica milenaria que puede aportarte numerosos beneficios, tanto físicos como mentales.
             Aquí te
             explicamos cómo puede ayudarte:</h3>
@@ -54,9 +55,9 @@
           <p>Esperamos que este post te ayude en tu camino para convertirte en un mejor practicante de yoga. Recuerda,
             la clave es la
             consistencia y la paciencia. ¡Buena suerte!</p>
-        </div>
-      </div>
-    </div>
+        </section>
+      </section>
+    </article>
   </div>
 </body>
 
