--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   <link rel="icon" href="./img/website-brand.webp">
   <title>Mundo deporte</title>
 </head>
+<style>
+  a {
+    text-decoration: none;
+    color: #000;
+  }
+
+  a:hover {
+    color: #000;
+  }
+</style>
 
 <body>
   <nav class="navbar sticky-top bg-dark">
@@ -21,7 +31,7 @@
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-danger" type="submit">Buscar</button>
-        <a href="./rss/index.rss"><img src="./img/rss.svg" alt="" style="width: 50px; height: 50px;"></a>
+        <a href="./rss/index.rss"><i class="fa-solid fa-rss fa-xl mx-4" style="color: #ffae00;"></i></a>
       </form>
     </div>
   </nav>
@@ -102,7 +112,7 @@
         <div class="col-5 my-2">
           <div class="row">
             <div class="col-12">
-              <a href="cycling.html">
+              <a class="" href="cycling.html">
                 <article class="card">
                   <img loading="lazy" src="./img/cycling.webp" alt="a bycicle">
                   <section class="card-body">
@@ -158,7 +168,7 @@
           </a>
         </section>
         <section class="rrss">
-
+          <a href="./rss/index.rss"><i class="fa-solid fa-rss fa-xl mx-4" style="color: #ffae00;"></i></a>
         </section>
         <section class="copyrigth">
           <h1>© El Blog de Nico 2024.Todos los derechos reservados</h1>
@@ -167,5 +177,6 @@
     </div>
   </footer>
 </body>
+
 
 </html>
