--- a/swimming.html
+++ b/swimming.html
@@ -9,14 +9,25 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/42f771bafc.js" crossorigin="anonymous"></script>
   <link rel="icon" href="./img/website-brand.webp">
-  <title>Mundo deporte- 🏊‍♀️ Mejora tus estilos de natación con estos consejos 🏊‍♂️</title>
+  <title>Mundo deporte - 🏊‍♀️ Mejora tus estilos de natación con estos consejos 🏊‍♂️</title>
 </head>
 
-<body>
-  <div class="col-9 m-2">
-    <article class="card">
-      <img loading="lazy" src="./img/swimming.webp" alt="a person swimming">
+<body style="background-color: #7f7f7f26;">
+  <nav class="navbar sticky-top bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"><img src="./img/website-brand.webp" alt="website-brand"></a>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-danger" type="submit">Buscar</button>
+        <a href="./rss/index.rss"><i class="fa-solid fa-rss fa-xl mx-4" style="color: #ffae00;"></i></a>
+      </form>
+    </div>
+  </nav>
+  <div class="d-flex justify-content-center">
+    <article class="card w-75 rounded">
+      <img class="rounded img-fluid" loading="lazy" src="./img/swimming.webp" alt="a person swimming">
       <section class="card-body">
         <div class="d-flex">
           <h1 class="card-title">🏊‍♀️ Mejora tus estilos de natación con estos consejos 🏊‍♂️</h1>
